2010-07-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Resolver/TextEditorResolverProvider.cs:
	  Track API changes.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryIndexerParameterDataProvider.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryTemplateParameterDataProvider.cs:
	  Worked on 'Bug 621658 - Parameter hints disappear
	  afterkeystroke'.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* CSharpBinding.addin.xml:
	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs:
	* MonoDevelop.CSharp.Resolver/TextEditorResolverProvider.cs:
	  Track ProjectDomService/Parser API.

2010-07-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Resolver/TextEditorResolverProvider.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	  Enhanced support for keyword like names.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Completion/DropDownBoxListWindow.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  Worked on version control gui.

2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpIndentEngineStack.cs:
	  added bounds check

2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpIndentEngineStack.cs:
	  added bounds check

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpIndentEngineStack.cs:
	  Indenting should now reflect the mono style.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpIndentEngineStack.cs:
	  Indenting should now reflect the mono style.
