@@ -1,3 +1,8 @@
+2010-07-17  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Track
+	  API changes.
+
 2010-07-16  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
